third_party/move/move-prover/tests/sources/functional/shift.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
   ┌─ tests/sources/functional/shift.move:95:9
   │
95 │         ensures result == x << 10u8;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/shift.move:65: shift_l_11_incorrect
   =         x = <redacted>
   =     at tests/sources/functional/shift.move:66: shift_l_11_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/shift.move:67: shift_l_11_incorrect
   =     at tests/sources/functional/shift.move:95: shift_l_11_incorrect (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/shift.move:38:9
   │
38 │         ensures result == x * 128 + 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/shift.move:33: shiftl_7_incorrect
   =         x = <redacted>
   =     at tests/sources/functional/shift.move:34: shiftl_7_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/shift.move:35: shiftl_7_incorrect
   =     at tests/sources/functional/shift.move:38: shiftl_7_incorrect (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/shift.move:54:9
   │
54 │         ensures result == x / 128 + 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/shift.move:49: shiftr_7_incorrect
   =         x = <redacted>
   =     at tests/sources/functional/shift.move:50: shiftr_7_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/shift.move:51: shiftr_7_incorrect
   =     at tests/sources/functional/shift.move:54: shiftr_7_incorrect (spec)
